--- a/deploy/PID-controller-config.yml
+++ b/deploy/PID-controller-config.yml
@@ -3,13 +3,13 @@ file:
   date: 20/06/2022 15:59:17
   description: PID Controller Config File
 app_configs:
-  healthCheckTopicPre: pid-controller/health-check/
-  configurationTopicPre: pid-controller/config-params/
+  healthCheckTopicPre: pid-controller/health-check
+  configurationTopicPre: pid-controller/config-params
   configPblshIntervalSec: 10
   extMqttBrokerIPAddr: 172.16.7.48
   extMqttPort: 1883
 pid_configs:
-- id: loop1
+- id: under-damped
   dGain: 1
   execIntervalMs: 10
   iGain: 0.004
@@ -19,13 +19,13 @@ pid_configs:
   loopEnabled: true
   outputBounded: false
   outputLowerBound: 10
-  outputOnDisable: 60.0
+  outputOnDisable: 20.0
   outputUpperBound: 100.0
   pGain: 2.1
   polledPoint: /dev1/gr1/D0
   setpoint: 60.0
   writePoint: /dev1/gr1/D1
-- id: loop2
+- id: critically-damped
   dGain: 1
   execIntervalMs: 10
   iGain: 0.004
@@ -35,13 +35,13 @@ pid_configs:
   loopEnabled: true
   outputBounded: false
   outputLowerBound: 10
-  outputOnDisable: 60
+  outputOnDisable: 20.0
   outputUpperBound: 100.0
   pGain: 2.1
   polledPoint: /dev1/gr1/D2
   setpoint: 60.0
   writePoint: /dev1/gr1/D3
-- id: loop3
+- id: over-damped
   dGain: 1
   execIntervalMs: 10
   iGain: 0.004
@@ -51,7 +51,7 @@ pid_configs:
   loopEnabled: true
   outputBounded: false
   outputLowerBound: 10
-  outputOnDisable: 60
+  outputOnDisable: 20.0
   outputUpperBound: 100
   pGain: 2.1
   polledPoint: /dev1/gr1/D4
